[package]
name = "cargo_toml_validate"
version = "1.0.0"
authors = ["Jan Schulte <hello@unexpected-co.de>"]
license = "MIT"
repository = "https://github.com/schultyy/cargo_toml_validate"
description = "Makes sure that Cargo.toml has all required fields present"

[dependencies]
toml = "0.4"
serde = "1.0.6"